test/corpus/bottom_command.txt
======
bottom
======

bottom 10 user by count()

---

(query
  (bottom_command
    limit: (number)
    groupby: (key
      (identifier))
    orderby: (call_expression
      function: (identifier)
      arguments: (arguments))))

=================
bottom with alias
=================

bottom 10 user as u by count() as c

---

(query
  (bottom_command
    limit: (number)
    groupby: (key
      (identifier))
    alias: (key
      (identifier))
    orderby: (call_expression
      function: (identifier)
      arguments: (arguments))
    alias: (key
      (identifier))))

============================
bottom with multiple groupby
============================

bottom 10 user, user2 by count()

---

(query
  (bottom_command
    limit: (number)
    groupby: (key
      (identifier))
    groupby: (key
      (identifier))
    orderby: (call_expression
      function: (identifier)
      arguments: (arguments))))

=======================================
bottom with multiple groupby with alias
=======================================

bottom 10 user as u, user2 as u2 by count() as c

---

(query
  (bottom_command
    limit: (number)
    groupby: (key
      (identifier))
    alias: (key
      (identifier))
    groupby: (key
      (identifier))
    alias: (key
      (identifier))
    orderby: (call_expression
      function: (identifier)
      arguments: (arguments))
    alias: (key
      (identifier))))

=========
top alias
=========

top 10 user by count()

---

(query
  (bottom_command
    limit: (number)
    groupby: (key
      (identifier))
    orderby: (call_expression
      function: (identifier)
      arguments: (arguments))))
