test/corpus/choose_command.txt
======
choose
======

choose path

---

(query
  (choose_command
    keypath: (aliased_expression
      expression: (key))))

==========================
choose with multiple paths
==========================

choose path, path2

---

(query
  (choose_command
    keypath: (aliased_expression
      expression: (key))
    keypath: (aliased_expression
      expression: (key))))

=================
choose with alias
=================

choose path as alias

---

(query
  (choose_command
    keypath: (aliased_expression
      expression: (key)
      alias: (key))))

=====================================
choose with multiple paths with alias
=====================================

choose path as alias, path2 as alias2

---

(query
  (choose_command
    keypath: (aliased_expression
      expression: (key)
      alias: (key))
    keypath: (aliased_expression
      expression: (key)
      alias: (key))))

============
select alias
============

select path

---

(query
  (choose_command
    keypath: (aliased_expression
      expression: (key))))
