test/corpus/convert_command.txt
=======
convert
=======

convert keypath:type

---

(query
  (convert_command
    keypath: (key)
    type: (type)))

==============================
convert with datatypes keyword
==============================

convert datatypes keypath:type

---

(query
  (convert_command
    keypath: (key)
    type: (type)))

================
convert multiple
================

convert keypath:type, path2:type

---

(query
  (convert_command
    keypath: (key)
    type: (type)
    keypath: (key)
    type: (type)))

=======================================
convert multiple with datatypes keyword
=======================================

convert datatypes keypath:type, path2:type

---

(query
  (convert_command
    keypath: (key)
    type: (type)
    keypath: (key)
    type: (type)))

==========
conv alias
==========

conv keypath:type

---

(query
  (convert_command
    keypath: (key)
    type: (type)))

=========================
convert with full keypath
=========================

convert $d.keypath:type

---

(query
  (convert_command
    keypath: (field_expression
      expression: (key)
      field: (field))
    type: (type)))
