test/corpus/countby_command.txt
=======
countby
=======

countby expr

---

(query
  (countby_command
    expr: (key
      (identifier))))

==================
countby with alias
==================

countby expr as e

---

(query
  (countby_command
    expr: (key
      (identifier))
    alias: (key
      (identifier))))

=================
countby with into
=================

countby expr into path

---

(query
  (countby_command
    expr: (key
      (identifier))
    into: (key
      (identifier))))

===========================
countby with alias and into
===========================

countby expr as a into path

---

(query
  (countby_command
    expr: (key
      (identifier))
    alias: (key
      (identifier))
    into: (key
      (identifier))))
