test/corpus/create_command.txt
======
create
======

create path from expr

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

========================
create on keypath exists
========================

create path from expr on keypath exists fail

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

=========================
create on keypath missing
=========================

create path from expr on keypath missing create

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

=========================
create on datatype change
=========================

create path from expr on datatype change overwrite

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

======================
create with everything
======================

create path from expr on keypath exists fail on keypath missing create on datatype change overwrite

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

=======
c alias
=======

c path from expr

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

=========
add alias
=========

add path from expr

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))

=======
a alias
=======

a path from expr

---

(query
  (create_command
    keypath: (key
      (identifier))
    from: (key
      (identifier))))
