test/corpus/dedupeby_command.txt
========
dedupeby
========

dedupeby a keep 10

---

(query
  (dedupeby_command
    expression: (key)
    keep: (number)))

======================
dedupeby multiple expr
======================

dedupeby a, b keep 10

---

(query
  (dedupeby_command
    expression: (key)
    expression: (key)
    keep: (number)))
