test/corpus/filter_command.txt
======
filter
======

filter expr

---

(query
  (filter_command
    condition: (key
      (identifier))))

=======
f alias
=======

f expr

---

(query
  (filter_command
    condition: (key
      (identifier))))

===========
where alias
===========

where expr

---

(query
  (filter_command
    condition: (key
      (identifier))))
