test/corpus/find_command.txt
====
find
====

find 'a' in path

---

(query
  (find_command
    search: (string)
    keypath: (key
      (identifier))))

==========
text alias
==========

text 'a' in path

---

(query
  (find_command
    search: (string)
    keypath: (key
      (identifier))))
