test/corpus/groupby_command.txt
=======
groupby
=======

groupby expr aggregate func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))

==========================
groupby multiple groupings
==========================

groupby expr, expr aggregate func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))

=====================================
groupby multiple groupings with alias
=====================================

groupby expr as alias, expr as alias aggregate func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key)
      alias: (key))
    grouping: (aliased_expression
      expression: (key)
      alias: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))

============================
groupby multiple aggregation
============================

groupby expr aggregate func(), func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))

==============================
groupby aggregation with alias
==============================

groupby expr aggregate func() as alias

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments))
      alias: (key))))

=======================================
groupby multiple aggregation with alias
=======================================

groupby expr aggregate func() as alias, func() as alias

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments))
      alias: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments))
      alias: (key))))

=================
groupby agg alias
=================

groupby expr agg func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))

=======================
groupby calculate alias
=======================

groupby expr calculate func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))

==================
groupby calc alias
==================

groupby expr calc func()

---

(query
  (groupby_command
    grouping: (aliased_expression
      expression: (key))
    aggregation: (aliased_expression
      expression: (call_expression
        function: (key)
        arguments: (arguments)))))
