test/corpus/join_command.txt
==========
join using
==========

join (source logs) using id into logins

---

(query
  (join_command
    right_query: (query
      (source_command
        datastore: (identifier)))
    join_path: (key
      (identifier))
    into: (key
      (identifier))))

=========================
join using multiple paths
=========================

join (source logs) using id, id2 into logins

---

(query
  (join_command
    right_query: (query
      (source_command
        datastore: (identifier)))
    join_path: (key
      (identifier))
    join_path: (key
      (identifier))
    into: (key
      (identifier))))

=================
join on condition
=================

join (source logs) on expr into logins

---

(query
  (join_command
    right_query: (query
      (source_command
        datastore: (identifier)))
    condition: (key
      (identifier))
    into: (key
      (identifier))))
