test/corpus/move_command.txt
====
move
====

move path1 to path2

---

(query
  (move_command
    keypath: (key)
    to: (key)))

=======
m alias
=======

m path1 to path2

---

(query
  (move_command
    keypath: (key)
    to: (key)))
