test/corpus/redact_command.txt
=============
redact string
=============

redact keypath 'pattern' to 'redacted'

---

(query
  (redact_command
    keypath: (key)
    pattern: (string)
    to: (string)))

============
redact regex
============

redact keypath /pattern/ to 'redacted'

---

(query
  (redact_command
    keypath: (key)
    pattern: (regex
      (regex_pattern))
    to: (string)))

============================
redact string with matching keyword
============================

redact keypath matching 'pattern' to 'redacted'

---

(query
  (redact_command
    keypath: (key)
    pattern: (string)
    to: (string)))

==================================
redact regex with matching keyword
==================================

redact keypath matching /pattern/ to 'redacted'

---

(query
  (redact_command
    keypath: (key)
    pattern: (regex
      (regex_pattern))
    to: (string)))
