test/corpus/remove_command.txt
======
remove
======

remove path

---

(query
  (remove_command
    keypath: (key)))

========================
remove multiple keypaths
========================

remove path, path2, path3

---

(query
  (remove_command
    keypath: (key)
    keypath: (key)
    keypath: (key)))

=======
r alias
=======

r path

---

(query
  (remove_command
    keypath: (key)))
