test/corpus/roundtime_command.txt
=========
roundtime
=========

roundtime to 1h

---

(query
  (roundtime_command
    interval: (interval)))

=====================
roundtime with source
=====================

roundtime source to 1h

---

(query
  (roundtime_command
    source: (key
      (identifier))
    interval: (interval)))

===================
roundtime with into
===================

roundtime to 1h into key

---

(query
  (roundtime_command
    interval: (interval)
    into: (key
      (identifier))))

==============================
roundtime with source and into
==============================

roundtime source to 1h into key

---

(query
  (roundtime_command
    source: (key
      (identifier))
    interval: (interval)
    into: (key
      (identifier))))
