test/corpus/source_command.txt
============
source spans
============

source spans

---

(query
  (source_command
    datastore: (identifier)))

===========
source logs
===========

source spans

---

(query
  (source_command
    datastore: (identifier)))

========================
source custom enrichment
========================

source custom_enrichment_name

---

(query
  (source_command
    datastore: (identifier)))

=======================
source logs around time 
=======================

source logs around @'2024-12-30T00:12:23Z' interval 1h

---

(query
  (source_command
    datastore: (identifier)
    around: (timestamp_literal
      (string))
    interval: (interval)))

==================================
source logs around time expression
==================================

source logs around $p.timeRange.endTime - 2h interval 1h * 2

---

(query
  (source_command
    datastore: (identifier)
    around: (binary_expression
      left: (field_expression
        expression: (field_expression
          expression: (key)
          field: (field))
        field: (field))
      right: (interval))
    interval: (binary_expression
      left: (interval)
      right: (number))))

========================================
source logs around time without interval
========================================

source logs around @'2024-12-30T00:12:23Z'

---

(query
  (source_command
    datastore: (identifier)
    around: (timestamp_literal
      (string))))

===================================================
source logs around time expression without interval
===================================================

source logs around $p.timeRange.endTime - 2h

---

(query
  (source_command
    datastore: (identifier)
    around: (binary_expression
      left: (field_expression
        expression: (field_expression
          expression: (key)
          field: (field))
        field: (field))
      right: (interval))))

========================
source logs between time 
========================

source logs between @'2024-12-30T00:12:23Z' and @'2024-12-30T00:12:23Z'

---

(query
  (source_command
    datastore: (identifier)
    start: (timestamp_literal
        (string))
    end: (timestamp_literal
        (string))))

===================================
source logs between time expression
===================================

source logs between @'now' - 24h and @'now' + 24h

---

(query
  (source_command
    datastore: (identifier)
    start: (binary_expression
      left: (timestamp_literal
        (string))
      right: (interval))
    end: (binary_expression
      left: (timestamp_literal
        (string))
      right: (interval))))

=========================
source logs last interval
=========================

source logs last 1h

---

(query
  (source_command
    datastore: (identifier)
    last: (interval)))

===========================
source logs last expression
===========================

source logs last 1h * 2

---

(query
  (source_command
    datastore: (identifier)
    last: (binary_expression
      left: (interval)
      right: (number))))

=======================
source logs timeshifted
=======================

source logs timeshifted 1h

---

(query
  (source_command
    datastore: (identifier)
    timeshift: (interval)))
